Changelog
=========

2.0 - Unreleased
----------------

* Requiring zope.component >= 3.5.0.
  [icemac]

* Utilities registered with an absolute path were returned with the
  RequestContainer in the aq_chain. As the result of the first utility
  look-up is stored in the adapter look-up cache, subsequent utility
  look-ups return the utlitiy with the RequestContainer of the first
  look-up.
  
  Solution: For utilities registered with an absolute path the
  RequestContainer is now also removed at look-up.
  [icemac]

1.0c1 - 2008-08-27
------------------

* Added buildout for project, so testing can be done using ``bin/test``.
  [icemac]

* Added ability to register utilities with an absolute path. These
  utilities are returned wrapped into their original context. This
  change is backward compatible to existing registries.

  But registering utilities having an acquisition context will behave
  different because these utilities will be returned in their original
  context. To restore the previous behavior, register utilities
  unwrapped (aq_base).

  For storing path information the component must implement
  getPhysicalPath and have an absolute path.

  When a component registered as utility is moved and registered again
  the path stored in registry gets updated.
  [icemac]


0.4 - 2008-07-23
----------------

* Rewrite PersistentComponents.registeredUtilities to not use
  internal methods. This makes it compatible with both zope.component <3.5.0dev
  and >3.5.0dev.
  [wichert]


0.3 - 2007-12-24
----------------

* Fixed potential aq problem when assigning various values to the utilities
  registry of the component registry.
  [hannosch]


0.2 - 2007-06-30
----------------

* Refactored and fixed aq wrapping: Nested site managers now return utilities
  wrapped in the right context. RequestContainers are removed and wrapped
  utilities are cached. This requires a special LookupClass called
  'FiveVerifyingAdapterLookup' in all 'utilities' registries used below a