@@ -1,3 +1,21 @@
+##############################################################################
+#
+# Copyright (c) 2007 Zope Corporation and Contributors. All Rights Reserved.
+#
+# This software is subject to the provisions of the Zope Public License,
+# Version 2.1 (ZPL).  A copy of the ZPL should accompany this distribution.
+# THIS SOFTWARE IS PROVIDED "AS IS" AND ANY AND ALL EXPRESS OR IMPLIED
+# WARRANTIES ARE DISCLAIMED, INCLUDING, BUT NOT LIMITED TO, THE IMPLIED
+# WARRANTIES OF TITLE, MERCHANTABILITY, AGAINST INFRINGEMENT, AND FITNESS
+# FOR A PARTICULAR PURPOSE.
+#
+##############################################################################
+"""Management view for local site manager.
+
+$Id$
+"""
+
+from zope.app.component.hooks import setSite
 from zope.component.globalregistry import base
 from five.localsitemanager import make_objectmanager_site
 
@@ -10,6 +28,7 @@ class ObjectManagerSiteView(ObjectManagerSiteView):
 
     def makeSite(self):
         make_objectmanager_site(self.context)
+        setSite(self.context)
 
     def sitemanagerTrail(self):
         if not self.isSite():
